--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <head>
-  <link rel="stylesheet" href="style.css">
+	<script type="text/javascript" src="/app/lib/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="/app/lib/angular/angular.js"></script>
+	<script type="text/javascript" src="/app/lib/bootstrap-star-rating/js/star-rating.js"></script>
+	<link rel="stylesheet" type="text/css" href="/app/lib/bootstrap-css/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="/app/lib/bootstrap-star-rating/css/star-rating.css">
+	<link rel="stylesheet" type="text/css" href="/assets/sass/style.scss">
 </head>
 <body>
   <div class="myMovieContainer">
